2007-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/autoload.el: Refactor for upcoming changes.
	(autoload-find-destination): New function extracted from
	update-file-autoloads.
	(update-file-autoloads): Use it.
	(autoload-generate-file-autoloads): New function extracted from
	generate-file-autoloads.  Use file-relative-name.  Delay computation of
	output-start to the first cookie.  Remove done-any, replaced by
	output-start.
	(generate-file-autoloads): Use it.

2007-06-24  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-comb.el (math-init-random-base,math-prime-test):
	Use math-read-number-simple to insert constants.
	(math-prime-test): Redo calculation of sum.

	* calc/calc-misc.el (math-div2-bignum): Use math-bignum-digit-size.

	* calc/calc-math.el (math-scale-bignum-digit-size): Rename from
	math-scale-bignum-3.
	(math-isqrt-bignum): Use math-scale-bignum-digit-size and
	math-bignum-digit-size.
	(math-isqrt-small): Add another possible initial guess.

2007-06-23  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-entry-format): New options
	`whitespace', `braces', and `string'.
	(bibtex-field-braces-alist, bibtex-field-strings-alist)
	(bibtex-field-braces-opt, bibtex-field-strings-opt)
	(bibtex-cite-matcher-alist): New variables.
	(bibtex-font-lock-keywords): Use bibtex-cite-matcher-alist.
	(bibtex-flash-head): Use blink-matching-delay.
	(bibtex-insert-kill, bibtex-mark-entry): Use push-mark.
	(bibtex-format-entry, bibtex-reformat): Handle new options of
	bibtex-entry-format.
	(bibtex-field-re-init, bibtex-font-lock-cite, bibtex-dist):
	New functions.
	(bibtex-complete-internal): Do not display messages while
	minibuffer is used.  Do not leave around a completions buffer
	that is out of date.
	(bibtex-copy-summary-as-kill): New optional arg.
	(bibtex-font-lock-url): New optional arg no-button.
	(bibtex-find-crossref): Use `bibtex-cite-matcher-alist'.
	(bibtex-url): Allow multiple URLs per entry.
